# salamandra-tcp

./: .gitignore  README.md
salamandra_client/: .gitignore  Cargo.toml  README.md  salamandra_client.toml
salamandra_client/src/: lib.rs  main.rs
salamandra_client/src/config/: config.rs
salamandra_client/src/file/: file.rs
salamandra_client/src/tcp/: connection.rs  tcp.rs
salamandra_server/: Cargo.toml  file_data  index.html  server.toml
salamandra_server/src/: lib.rs  main.rs
salamandra_server/src/config/: config.rs
salamandra_server/src/file/: file_manager.rs  mod.rs
salamandra_server/src/tcp/: connection.rs  mod.rs  tcp.rs
