[package]
name = "salamandra_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
local-ip-address = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.10"
indicatif = "0.17.3"

