[package]
name = "salamandra_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
local-ip-address = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
toml = "0.5.10"
reqwest = { version = "0.11.14", features = ["stream"]}
indicatif = "0.15.0"
futures-util = "0.3.26"
futures = "0.3"
tokio = { version = "1.13.0", features = ["full"] }

