[package]
name = "salamandra_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
chrono = "0.4.23"
local-ip-address = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.10"
actix-web = "4"
actix-files = "0.6.2"


